# llm-learns

./: .gitignore  README.md  cleanup_old_folders.py  main.py  pyproject.toml  requirements.txt
code/: demo.py  train.py  transformer_blocks.py  transformer_components.py
common/: transformer_components.py
l1/: train.py
l2/: data.txt  train_sentencepiece_gpt.py
sentencepiece_gpt/: data.txt  train_sentencepiece_gpt.py
word_level_gpt/: train.py
