[project]
name = "llm-learns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.0",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22.2",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "word2vec>=0.11.1",
]
